--- a/demos/completed/app/css/LayerFx.css
+++ b/demos/completed/app/css/LayerFx.css
@@ -1,10 +1,56 @@
+/* https://color.adobe.com/ds21-bright-color-theme-16850975 */
+
 .layer-fx {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  padding: 1rem;
+  margin: 0;
+  background-color: #0442bf;
+  border: 1px solid #116ebf;
+}
+
+.layer-fx h2 {
+  text-align: center;
+  margin: 0 0 0.5rem 0;
+  padding: 0;
+  color: #fff;
 }
 
 .layer-fx__container {
-  max-height: 250px;
+  flex: 1;
   overflow: auto;
 }
 
+.layer-fx fieldset[disabled] legend label,
+.layer-fx fieldset legend label {
+  color: #f20530;
+  font-weight: bold;
+}
+
 .layer-fx fieldset {
+  margin: 1rem 0;
+  padding: 1rem;
+  border: 1px solid #116ebf;
+  border-collapse: collapse;
+}
+
+.layer-fx fieldset:hover {
+  border-color: #bf0f70;
+}
+
+.layer-fx fieldset[disabled] label {
+  color: #ddd;
+}
+
+.layer-fx label {
+  display: flex;
+  margin: 0 0 0.5rem 0;
+  padding: 0;
+  color: #f2b705;
+}
+
+.layer-fx__slider {
+  flex: 1;
 }
