--- a/demos/3-simple-view/app/css/SimpleWidget.css
+++ b/demos/3-simple-view/app/css/SimpleWidget.css
@@ -1,5 +1,5 @@
 .simple-widget {
-  background-color: rgba(255, 0, 0);
+  background-color: #F20530;
   padding: 30px;
   font-weight: bold;
   color: white;
@@ -8,5 +8,5 @@
 }
 
 .simple-widget--enabled {
-  background-color: rgba(0, 0, 255);
+  background-color: #116EBF;
 }
